# getmyancestors

./: .continueignore  .envrc  .geminiignore  .gitattributes  .gitignore  .gitmodules  .mailmap  .requirements-lint.txt  Makefile  README.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
getmyancestors/: __init__.py  __main__.py  fstogedcom.py  getmyanc.py  mergemyanc.py  utils.py
getmyancestors/classes/: constants.py  gedcom.py  gui.py  session.py  tree.py
getmyancestors/classes/tree/: __init__.py  core.py  elements.py  records.py  utils.py
getmyancestors/tests/: conftest.py  test_cache_concurrency.py  test_cli.py  test_fam_marriage.py  test_fork_features.py  test_gedcom_logic.py  test_indi_name.py  test_installation.py  test_integration.py  test_main.py  test_merge_idempotency.py  test_pedi.py  test_session.py  test_session_caching.py  test_tree.py
tests/: conftest.py  fixtures.env  offline_test.py  test_cli.py  test_installation.py  test_parsing.py  test_session.py  test_tree.py
