[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getmyancestors"
description = "Retrieve GEDCOM data from FamilySearch Tree"
requires-python = ">=3.7"
license = {text = "GNU"}
keywords = [
  "getmyancestors",
  "familysearch",
  "fstogedcom",
  "gedcom",
]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "babelfish==0.6.1",
    "diskcache==5.6.3",
    "requests==2.32.4",
    "fake-useragent==2.2.0",
    "geocoder==1.38.1",
    "requests-ratelimiter==0.7.0",
    "requests-cache==1.2.1",
]
dynamic = ["version", "readme"]

[project.urls]
HomePage = "https://github.com/Linekio/getmyancestors"

[project.scripts]
getmyancestors = "getmyancestors.getmyanc:main"
mergemyancestors = "getmyancestors.mergemyanc:main"
fstogedcom = "getmyancestors.fstogedcom:main"

[project.optional-dependencies]
dev = [
    "black==25.12.0",
    "coverage==7.13.1",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pylint==4.0.4",
    "pytest==9.0.2",
    "ruff==0.14.10",
    "types-requests==2.32.4.20250913",
]

[tool.setuptools]
# Use find packages with exclude pattern
packages.find = {exclude = ["http_cache", "http_cache.*"]}

[tool.setuptools.dynamic]
version = {attr = "getmyancestors.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
getmyancestors = ["fstogedcom.png"]

# Linting configs

[tool.isort]
line_length = 88
known_first_party = "getmyancestors"

# See: https://copdips.com/2020/04/making-isort-compatible-with-black.html
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py39" # Lowest supported python version

[tool.ruff.lint]
# E/W = pycodestyle, F = Pyflakes
# B = bugbear
select = ["E", "F", "W", "B"]
ignore = [
    "E262", # inline comment should start with '# '
    "E501", # Line too long
]

[tool.ruff.lint.per-file-ignores]  # Temporary, hopefully
"__init__.py" = ["F401"]
"getmyancestors/classes/gedcom.py" = ["E203"]
"getmyancestors/classes/tree.py" = ["E203"]
"getmyancestors/classes/translation.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Testing configs

[tool.pytest]
# See: https://docs.pytest.org/en/7.1.x/reference/customize.html
testpaths = ["getmyancestors/tests"]

[tool.coverage.run]
# See: https://coverage.readthedocs.io/en/7.2.2/config.html#run
command_line = "-m pytest -svv"
source = ["getmyancestors"]

[tool.coverage.report]
fail_under = 45.00
precision = 2

show_missing = true
skip_empty = true
skip_covered = true

omit = [
    "getmyancestors/classes/gui.py",  # not part of CLI tests (yet)
    "getmyancestors/fstogedcom.py",   # GUI tool that requires Tkinter
    "**/tests/**"  # do NOT show coverage tests... redundant
]

exclude_lines = ["pragma: no cover"]